--- a/ChatClient/src/ClientChat/ChatMainForm.fxml
+++ b/ChatClient/src/ClientChat/ChatMainForm.fxml
@@ -9,6 +9,6 @@
       <ListView fx:id="dialogListView" layoutX="200.0" prefHeight="371.0" prefWidth="402.0" />
       <TextField fx:id="messageTextBox" layoutX="200.0" layoutY="374.0" onKeyPressed="#messageTextBoxKeyPressed" prefHeight="25.0" prefWidth="309.0" />
       <Button fx:id="sendButton" layoutX="512.0" layoutY="374.0" mnemonicParsing="false" onAction="#onSendButtonClick" prefHeight="25.0" prefWidth="90.0" text="Отправить" />
-      <Label fx:id="userNameLabel" layoutX="14.0" layoutY="378.0" prefHeight="17.0" prefWidth="165.0" text="Пользователь" textFill="#2a14b5" />
+      <Label fx:id="userNameLabel" layoutX="14.0" layoutY="378.0" prefHeight="17.0" prefWidth="165.0" text="Авторизация" textFill="#2a14b5" />
    </children>
 </AnchorPane>
